# python_json_database_manager

./: .gitignore  README.md  __init__.py  database_manager.py  pyproject.toml  test.py  test_database_manager.py
auth_engine/: .gitignore  Env.py  Errors.py  README.md  emailtesting.py  gmailtesting.py  pseudocode.md  speudocodecode.py
auth_engine/claims/: BaseClaim.py  JwtClaims.py  NamespacedClaim.py  TimedClaims.py  __init__.py  exceptions.py
auth_engine/claims/test/: __init__.py  test_BaseClaim.py  test_JwtClaims.py  test_NamepacedClaim.py  test_TimedClaims.py
auth_engine/claims/util/: __init__.py  is_number.py  time_from_epoch_as_int.py
auth_engine/error_logging/: __init__.py  enable_cgitb.py  exceptions.py
auth_engine/error_logging/errors/: display_error.py
auth_engine/keys/: mykey.pub  testing_keys.py
auth_engine/passport/: JwtPassport.py  Passport.py  __init__.py  exceptions.py  possible_algorithms.py
auth_engine/passport/test/: Passport_test.py
auth_engine/proofs/: BcryptPasswordProof.py  JWTProof.py  Proof.py  TokenProof.py  __init__.py  exceptions.py
auth_engine/proofs/test/: TestProof.py  test_BcryptPassword_proof.py  test_proof.py  test_token_proof.py
auth_engine/python_json_database_manager/: README.md  __init__.py  test.py
auth_engine/use_cases/: __init__.py  can_user_recieve_passport.py  stamp_passport.py
auth_engine/use_cases/test/: test_request_passport.py
auth_engine/user/: User.py  __init__.py
auth_engine/user_storage/: BaseStorage.py  JsonFilesStorage.py  MemoryStorage.py  __init__.py  exceptions.py
(+3 files in other folders)
