[tool.poetry]
name = "python-json-database-manager"
version = "0.1.0"
description = "A thread safe json files database context manager."
authors = ["Quinten Cabo <tintin10q@hotmail.com>"]
readme = "README.md"
packages = [{include = "database_manager.py"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'test_database_manager:run_test'