[tool.poetry]
name = "python-json-database-manager"
version = "0.1.0"
description = "A thread safe json files database context manager."
authors = ["Quinten Cabo <tintin10q@hotmail.com>"]
readme = "README.md"
packages = [{include = "database_manager.py"}]
license = "GNUV2"
homepage = "https://github.com/tintin10q/python_json_database_manager"
repository = "https://github.com/tintin10q/python_json_database_manager"
classifiers = ["License :: GNU V2 License","Programming Language :: Python :: 3"]
keywords = ["json", "database", "thread-save", "context-manager", "0 dependencies"]

include = ["LICENSE", "test_database_manager.py"]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'test_database_manager:run_test'
